--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,18 @@
 buildscript {
-	repositories {
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
-		mavenCentral()
-	}
-	dependencies {
-		classpath('org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE')
-		classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
-	}
+    ext {
+        springBootVersion = '2.0.5.RELEASE'
+    }
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath('gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.13.0')
+        classpath('io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE')
+    }
 }
 
 apply plugin: 'java'
@@ -21,29 +25,41 @@ apply plugin: 'com.palantir.docker'
 group = '955065381857.dkr.ecr.cn-north-1.amazonaws.com.cn'
 
 bootJar {
-	baseName = 'inventory-service'
-	version = '0.1.0'
+    baseName = 'inventory-service'
+    version = '0.1.0'
 }
 
 task unpack(type: Copy) {
-	dependsOn bootJar
-	from(zipTree(tasks.bootJar.outputs.files.singleFile))
-	into("build/dependency")
+    dependsOn bootJar
+    from(zipTree(tasks.bootJar.outputs.files.singleFile))
+    into("build/dependency")
 }
 docker {
-	name "${project.group}/${bootJar.baseName}"
-	copySpec.from(tasks.unpack.outputs).into("dependency")
-	buildArgs(['DEPENDENCY': "dependency"])
+    name "${project.group}/${bootJar.baseName}"
+    copySpec.from(tasks.unpack.outputs).into("dependency")
+    buildArgs(['DEPENDENCY': "dependency"])
 }
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+
+ext {
+    springCloudVersion = 'Finchley.SR2'
+}
+
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-web')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.cloud:spring-cloud-starter-feign:1.4.6.RELEASE')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
