--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.5.RELEASE'
+        springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
         maven {
@@ -53,8 +53,15 @@ ext {
 }
 
 dependencies {
+    compileOnly('org.projectlombok:lombok:1.18.4')
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.cloud:spring-cloud-starter-openfeign')
+    implementation('org.flywaydb:flyway-core')
+    runtimeOnly('mysql:mysql-connector-java')
+    compileOnly('org.projectlombok:lombok')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
+    compile('org.modelmapper:modelmapper:1.1.1')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
