--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,29 @@
 server:
   port: 9080
+
+spring:
+  datasource:
+    url: jdbc:mysql://dmall-inventory-db-dev.cti1pnc10c3g.rds.cn-north-1.amazonaws.com.cn:3306/dmall_inventory_db?noAccessToProcedureBodies=true&createDatabaseIfNotExist=true&m=yes&characterEncoding=UTF-8&connectTimeout=30000&useSSL=false&socketTimeout=30000&autoReconnect=true&maxReconnects=10&initialTimeout=10
+    username: admin
+    password: abcd1234
+    driver-class-name: com.mysql.jdbc.Driver
+    connection-test-query: "SELECT 1 FROM DUAL"
+    test-while-idle: true
+    test-on-borrow: true
+    validation-interval: 600000
+    validation-query=: SELECT 1
+    max-idle: 3
+    maximum-pool-size: 5
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: true
+    generate-ddl: false
+    hibernate:
+      use-new-id-generator-mappings: false
+  flyway:
+    locations: "classpath:/db/migration"
+springfox:
+  documentation:
+    swagger:
+      v2:
+        path: /swagger
