--- a/inventory-service-kube.yaml
+++ b/inventory-service-kube.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: inventory-service
-        image: 955065381857.dkr.ecr.cn-north-1.amazonaws.com.cn/inventory-service:latest
+        image: 955065381857.dkr.ecr.cn-north-1.amazonaws.com.cn/inventory-service:BUILD_VERSION
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 9080
