--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 9080
 spring:
   datasource:
-    url: jdbc:mysql://dmall-inventory-db-dev.cti1pnc10c3g.rds.cn-north-1.amazonaws.com.cn:3306/dmall_inventory_db?noAccessToProcedureBodies=true&createDatabaseIfNotExist=true&m=yes&characterEncoding=UTF-8&connectTimeout=30000&useSSL=false&socketTimeout=30000&autoReconnect=true&maxReconnects=10&initialTimeout=10
-    username: admin
-    password: abcd1234
+    url: jdbc:mysql://mydb.cti1pnc10c3g.rds.cn-north-1.amazonaws.com.cn/dmall_inventory_db?noAccessToProcedureBodies=true&createDatabaseIfNotExist=true&m=yes&characterEncoding=UTF-8&connectTimeout=30000&useSSL=false&socketTimeout=30000&autoReconnect=true&maxReconnects=10&initialTimeout=10
+    username: ${DB_USER}
+    password: ${DB_PASS}
     driver-class-name: com.mysql.jdbc.Driver
     connection-test-query: "SELECT 1 FROM DUAL"
     test-while-idle: true
