--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
         springBootVersion = '2.0.6.RELEASE'
     }
     repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -40,7 +40,13 @@ docker {
 }
 
 repositories {
+    maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
     mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
 
